--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -3,7 +3,9 @@ hostname= vip1.kuwo.cn,p.du.163.com,apigate.zymk.cn,vni.kwaiying.com,*.my10api.c
 	
 ###########NobyDa作者###########
 //hostname= vip1.kuwo.cn,p.du.163.com,apigate.zymk.cn,vni.kwaiying.com,*.my10api.com,www.luqijianggushi.com,account.wps.cn,origin-prod-phoenix.jibjab.com,api.bjxkhc.com,xy-viva.kakalili.com,ap*.intsig.net,m*.bybutter.com,api.vuevideo.net,api.picsart.c*,ios.fuliapps.com,apple.fuliapps.com,*.pipiapps.com,ios.xiangjiaoapps.com,apple.xiangjiaoapps.com,*.xiangxiangapps.com,api.meiease.c*,api.revenuecat.com,bmall.camera360.com,api.polaxiong.com
-      
+
+#百度网盘 解锁在线视频倍率/清晰度
+https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
 # 酷我音乐SVIP (By yxiaocai)
 #^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
 
