--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -3,6 +3,8 @@ hostname = api.jtshuzhiwa.com,api.revenuecat.com,api-sub.meitu.com,info.json,not
 
 /******************************
 
+更新维护此合集：朱丽叶
+TG频道群:https://t.me/jianjiaoQUN
 脚本作者：彭于晏
 TG频道群：https://t.me/py
 使用声明：⚠️此脚本仅供学习与交流，请勿转载与贩卖！⚠️⚠️⚠️
