--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -1,50 +1,50 @@
 hostname = api.jtshuzhiwa.com,api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,wxsdk-data.d3games.com,%APPEND% api4.bybutter.com,server1.xxxy.dayukeji.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,www.caaaat.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,wx-xmlb.lanfeitech.com,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,bladecn.mofishgames.com,update.kl321.com,wx-bingdu.lanfeitech.com
 
 
-/******************************
+//******************************
+//⚠️如果脚本未解锁成功，请先开启脚本，卸载app，然后重新下载软件使用，还不行的话把脚本放在本地使用哦
+//更新维护此合集：朱丽叶
+//TG频道群:https://t.me/jianjiaoQUN
+//脚本作者：彭于晏
+//TG频道群：https://t.me/py
+//使用声明：⚠️此脚本仅供学习与交流，请勿转载与贩卖！⚠️⚠️⚠️
 
-更新维护此合集：朱丽叶
-TG频道群:https://t.me/jianjiaoQUN
-脚本作者：彭于晏
-TG频道群：https://t.me/py
-使用声明：⚠️此脚本仅供学习与交流，请勿转载与贩卖！⚠️⚠️⚠️
+//******************************
+//①下列软件名字的MITM主机名字为api.revenuecat.com
+//为避免重复使用在上方hostname里面只有一个请悉知
+//Apollo-记录你的影视生活
+//Grow
+//MoneyThings—记账
+//Pillow： 睡眠周期跟踪器
+//Pixelmator Photo
+//Planny • 智能待办
+//Scanner Pro
+//1blocker
+//白云天气-感知自然呼吸
+//fileball
+//Fin -预算与开销追踪
+//gear浏览器插件
+//目标地图
+//谜底时钟
+//图图记账
+//VSCO:照片编辑
+//*******************************
 
-******************************
-①下列软件名字的MITM主机名字为api.revenuecat.com
-为避免重复使用在上方hostname里面只有一个请悉知
-Apollo-记录你的影视生活
-Grow
-MoneyThings—记账
-Pillow： 睡眠周期跟踪器
-Pixelmator Photo
-Planny • 智能待办
-Scanner Pro
-1blocker
-白云天气-感知自然呼吸
-fileball
-Fin -预算与开销追踪
-gear浏览器插件
-目标地图
-谜底时钟
-图图记账
-VSCO:照片编辑
-*******************************
+//②下列软件名字的MITM主机名字为buy.itunes.apple.com
+//为避免重复使用在上方hostname里面只有一个请悉知
+//Pandora-管理你的订阅
+//Picsew滚动截图
+//Proknockout扣图神器
+//https抓包
+//幻影相册
+//old roll复古相机
+//Panda Widget
+//Launch Center Pro
+//PrettyUp视频美化
+//文件管理器
+//熊掌记- Markdown
 
-②下列软件名字的MITM主机名字为buy.itunes.apple.com
-为避免重复使用在上方hostname里面只有一个请悉知
-Pandora-管理你的订阅
-Picsew滚动截图
-Proknockout扣图神器
-https抓包
-幻影相册
-old roll复古相机
-Panda Widget
-Launch Center Pro
-PrettyUp视频美化
-文件管理器
-熊掌记- Markdown
-
-*******************************/
+//*******************************
 
 #91视频(TF版)+解锁VIP
 ^https:\/\/api\.jtshuzhiwa\.com\/m_user\/info url script-request-header https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/91tv.js
