--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -1,4 +1,4 @@
-hostname = api.jtshuzhiwa.com,api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,wxsdk-data.d3games.com,%APPEND% api4.bybutter.com,server1.xxxy.dayukeji.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,www.caaaat.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,wx-xmlb.lanfeitech.com,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,bladecn.mofishgames.com,update.kl321.com,wx-bingdu.lanfeitech.com
+hostname = api.jtshuzhiwa.com,api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,wxsdk-data.d3games.com,%APPEND% api4.bybutter.com,server1.xxxy.dayukeji.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,www.caaaat.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,wx-xmlb.lanfeitech.com,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,bladecn.mofishgames.com,update.kl321.com,wx-bingdu.lanfeitech.com,yxgs-tf-yx.tapenjoy.com,puzzle.xcxsc.net,
 
 
 //******************************
@@ -393,4 +393,14 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #*******************************
 ^https:\/\/wx-bingdu\.lanfeitech\.com\/api\/archive\/get url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/xmbd.js
 
+#小兵别嚣张+无限钻石和金币材料
+#下载地址：https://is.gd/O2drxK
+#使用方法：下载以后/不要打开游戏/先开启规则/进入游戏即可
+#*******************************
+http:\/\/yxgs-tf-yx\.tapenjoy\.com\/api\/user\/dl url script-request-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/xbbxz.js
+
+#拼图鸭相机-解锁VIP
+#下载地址：https://is.gd/0GSZqD
+#*******************************
+^https:\/\/puzzle\.xcxsc\.net\/v5\/user\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ptyxj.js
 
