--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -1,4 +1,4 @@
-hostname = api.jtshuzhiwa.com,api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,wxsdk-data.d3games.com,%APPEND% api4.bybutter.com,server1.xxxy.dayukeji.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,www.caaaat.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,wx-xmlb.lanfeitech.com,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,bladecn.mofishgames.com,update.kl321.com,wx-bingdu.lanfeitech.com,yxgs-tf-yx.tapenjoy.com,puzzle.xcxsc.net,
+hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,wxsdk-data.d3games.com,%APPEND% api4.bybutter.com,server1.xxxy.dayukeji.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,www.caaaat.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,wx-xmlb.lanfeitech.com,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,bladecn.mofishgames.com,update.kl321.com,wx-bingdu.lanfeitech.com,yxgs-tf-yx.tapenjoy.com,puzzle.xcxsc.net,
 
 
 //******************************
@@ -45,9 +45,6 @@ hostname = api.jtshuzhiwa.com,api.revenuecat.com,api-sub.meitu.com,info.json,not
 //熊掌记- Markdown
 
 //*******************************
-
-#91视频(TF版)+解锁VIP
-^https:\/\/api\.jtshuzhiwa\.com\/m_user\/info url script-request-header https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/91tv.js
 
 #Apollo-记录你的影视生活
 #下载地址：http://mtw.so/6jr2E8
