--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -1,4 +1,6 @@
-hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,wxsdk-data.d3games.com,%APPEND% api4.bybutter.com,server1.xxxy.dayukeji.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,www.caaaat.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,wx-xmlb.lanfeitech.com,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,bladecn.mofishgames.com,update.kl321.com,wx-bingdu.lanfeitech.com,yxgs-tf-yx.tapenjoy.com,puzzle.xcxsc.net,
+hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,%APPEND% api4.bybutter.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,puzzle.xcxsc.net,puzzle.xcxsc.net,mid.zineapi.com,scibug.com,pay.wecut.com,baimiao.uzero.cn,api-weather.andy.works,closet.jinjian.tech,photos.adobe.io,gateway.ergedd.com,yyy.bosum.com,api.v1.esread.com,p.du.163.com,api.vistopia.com.cn,api-sub.meitu.com,api.apphud.com,pgapi.ksmobile.com,xy-viva.kakalili.com, api-chn.rthdo.com,bmall.camera360.com,api-v3.speedtest.cn,iap.etm.tech,iap.etm.tech,iap.etm.tech,
+
+
 
 
 //******************************
@@ -43,7 +45,8 @@ hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itu
 //PrettyUp视频美化
 //文件管理器
 //熊掌记- Markdown
-
+//拼图酱+解锁订阅
+//拼图鸭相机-解锁VIP
 //*******************************
 
 #Apollo-记录你的影视生活
@@ -108,7 +111,6 @@ https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-b
 #******************************* 
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Proknockout.js
 
-
 #Scanner Pro+解锁订阅
 #下载地址：http://mtw.so/6bRcSt
 #*******************************
@@ -139,7 +141,6 @@ https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-b
 #*******************************
 ^https:\/\/api\.revenuecat\.com\/v1\/subscribers url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/blocker.js
 
-
 #白云天气-感知自然呼吸+解锁订阅
 #使用教程：如果不行解锁：点击免费试用，卸载在开启规则
 #下载地址：http://mtw.so/6jqFa0
@@ -156,10 +157,10 @@ https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-b
 #*******************************
 ^https:\/\/cubox\.pro\/c\/api\/userInfo url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/cubox.js
 
-#documents+解锁订阅
+#documents+解锁订阅（和PDF—Expert点睛+解锁订阅脚本的主机名一样只保留一个主机名)
 #下载地址：http://mtw.so/6rPSoI
 #******************************* 
-^https:\/\/license\.pdfexpert\.com\/api\/2\.0\/documents\/subscription\/refresh url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/documents.js
+^https:\/\/license\.pdfexpert\.com\/api\/2\.0\/documents\/subscription\/refresh url script-request-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/documents.js	
 	
 #fileball+解锁订阅（脚本与Pillow重写重复，建议此脚本放在本地使用）
 #下载地址：美区
@@ -174,7 +175,7 @@ https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-b
 #疯狂消消消+无限钻石金币
 #下载地址：#微信小程序://疯狂消消消
 #*******************************
-^https:\/\/wxsdk-data\.d3games\.com\/game\/merge\/get url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/fkxxx.js
+#^https:\/\/wxsdk-data\.d3games\.com\/game\/merge\/get url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/fkxxx.js
 
 #gear浏览器插件+解锁订阅
 #下载地址：http://mtw.so/64tULY
@@ -193,13 +194,13 @@ https:\/\/api4\.bybutter\.com\/v4\/* url script-response-body https://raw.github
 #荒野日记—孤岛+无限贝壳
 #下载地址：https://is.gd/ap3T5u
 #*******************************
-http:\/\/server1\.xxxy\.dayukeji\.com:15009\/Logic\/user\/querymail1 url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/hyrz.js
+#http:\/\/server1\.xxxy\.dayukeji\.com:15009\/Logic\/user\/querymail1 url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/hyrz.js
+
 
 #幻影相册+解锁VIP
 #下载地址：http://mtw.so/64MsjK
 #*******************************
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/hyxc.js
-
 
 #驾校一点通+解锁VIP
 #特别注意：必须v10.6.2版本
@@ -241,7 +242,7 @@ http:\/\/server1\.xxxy\.dayukeji\.com:15009\/Logic\/user\/querymail1 url script-
 #买怪打装备+无限兑换钻石
 #下载地址：http://mtw.so/5BaK48
 #*******************************
-^https:\/\/www\.caaaat\.com:5502\/cdk\/getcdk url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mzbdgs.js
+#^https:\/\/www\.caaaat\.com:5502\/cdk\/getcdk url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mzbdgs.js
 
 #Noted-录音笔记+解锁订阅
 #下载地址：http://mtw.so/5XgNfB
@@ -277,7 +278,7 @@ http:\/\/server1\.xxxy\.dayukeji\.com:15009\/Logic\/user\/querymail1 url script-
 #三国全明星+无限兑换元宝
 #下载地址：微信小程序
 #******************************* 
-^https:\/\/wx-xmlb\.lanfeitech\.com\/api\/api\/exchange_cdkey url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/sgqmx.js
+#^https:\/\/wx-xmlb\.lanfeitech\.com\/api\/api\/exchange_cdkey url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/sgqmx.js
 
 #扫描全能王-手机扫描仪+解锁VIP
 #下载地址：http://u6v.cn/5XrG5r
@@ -378,26 +379,161 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #刀剑大作战+无限钻石金币
 #下载地址：https://is.gd/RSGWg0
 #*******************************
-^https:\/\/bladecn\.mofishgames\.com\/bladesrv\/login url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/djdzz.js
+#^https:\/\/bladecn\.mofishgames\.com\/bladesrv\/login url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/djdzz.js
 
 #地下城割草+ 无限钻石和金币
 #下载地址：https://is.gd/X0lRCx
 #*******************************
-^https:\/\/update\.kl321\.com\/funservice\/s01\/prefetch\/unifiedfetch url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/dxcgc.js
+#^https:\/\/update\.kl321\.com\/funservice\/s01\/prefetch\/unifiedfetch url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/dxcgc.js
+
 
 #消灭病毒+无限钻石金币
 #下载地址：微信小程序
 #*******************************
-^https:\/\/wx-bingdu\.lanfeitech\.com\/api\/archive\/get url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/xmbd.js
+#^https:\/\/wx-bingdu\.lanfeitech\.com\/api\/archive\/get url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/xmbd.js
 
 #小兵别嚣张+无限钻石和金币材料
 #下载地址：https://is.gd/O2drxK
 #使用方法：下载以后/不要打开游戏/先开启规则/进入游戏即可
 #*******************************
-http:\/\/yxgs-tf-yx\.tapenjoy\.com\/api\/user\/dl url script-request-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/xbbxz.js
+#http:\/\/yxgs-tf-yx\.tapenjoy\.com\/api\/user\/dl url script-request-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/xbbxz.js
 
 #拼图鸭相机-解锁VIP
 #下载地址：https://is.gd/0GSZqD
 #*******************************
 ^https:\/\/puzzle\.xcxsc\.net\/v5\/user\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ptyxj.js
+
+#PDF—Expert点睛+解锁订阅
+#下载地址：https://is.gd/oYx3kv
+*******************************
+^https:\/\/license\.pdfexpert\.com\/api\/2\.0\/pdfexpert6\/subscription\/refresh url script-request-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/PDFExpert.js
+
+#拼图鸭相机-解锁VIP
+#下载地址：https://is.gd/0GSZqD
+*******************************
+^https:\/\/puzzle\.xcxsc\.net\/v5\/user\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ptyxj.js
+
+#拼图酱+解锁订阅
+#下载地址：https://is.gd/WkX77N
+*******************************
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ptj.js
+
+#Varlens 微单相机+解锁VIP
+#下载地址：https://is.gd/tgiP0L
+*******************************
+^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Varlens.js
+
+#Focos+解锁订阅
+#下载地址：https://is.gd/vpRvsM
+#*******************************
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Focos.js
+
+
+#Symbolab计算器 +解锁订阅
+#下载地址：https://is.gd/zbDsaa
+#*******************************
+^https?:\/\/scibug\.com\/appleSubscriptionValidate$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Symbolab.js
+
+#MolyCam+解锁PRO
+#下载地址：https://is.gd/LomGzV
+#*******************************
+^https:\/\/pay\.wecut\.com\/apple\/iosVerifyReceipt\.php$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/MolyCam.js
+
+#白描-OCR 文字识别+解锁黄金会员
+#下载地址：https://is.gd/qInUpQ
+#*******************************
+^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/baimiao.js
+
+#Not Boring +解锁订阅
+#特别通知：可以解锁全家桶！四件套💓
+#下载地址：https://is.gd/LGpKsj
+#*******************************
+^https?:\/\/api-weather\.andy\.works\/v\d\/\w{18}$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/NotBoring.js
+
+#尽简衣橱+解锁VIP
+#下载地址：https://is.gd/F7X6yd
+#*******************************
+^https:\/\/closet\.jinjian\.tech\/api\/v3\/apple_app_store\/resolve_receipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/jjyc.js
+
+#Lr Adobe Lightroom+解锁订阅
+#下载地址：https://is.gd/UEAk0n
+#*******************************
+^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/lightroom.js
+
+#儿歌点点+解锁VIP
+#下载地址：https://is.gd/Og6DvK
+#*******************************
+http:\/\/gateway\.ergedd\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/egdd.js
+
+#博商小麦+解锁会员内容
+#下载地址：https://is.gd/gaq7mm
+#*******************************
+http:\/\/yyy\.bosum\.com\/enterprise url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/boshangxiaomai.js
+
+#向日葵阅读+解锁VIP
+#下载地址：https://is.gd/mYuPJG
+#*******************************
+^https:\/\/api\.v1\.esread\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/xiangrikui.js
+
+#网易蜗牛读书+解锁VIP
+#下载地址：https://is.gd/OWWJ7o
+#*******************************
+^https:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/yywnds.js
+
+#看理想-看见另一种可能+解锁VIP
+#下载地址：https://is.gd/CjkkBS
+#*******************************
+^https:\/\/api\.vistopia\.com\.cn\/api url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/kanlixiang.js
+
+#Wink-像修图一样修视频+解锁VIP
+#下载地址：https://is.gd/o3yZv8
+#*******************************
+^https:\/\/api-sub\.meitu\.com\/v2\/user\/vip_info_by_group url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Wink.js
+
+#EFEKT美易一视频特效+解锁订阅
+#下载地址：https://is.gd/HS2WLP
+#*******************************
+^https:\/\/api\.apphud\.com\/v1\/subscriptions url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/EFEKT.js
+
+#photoGrid-照片拼图+解锁订阅
+#下载地址：https://is.gd/BuImL6
+#*******************************
+^https:\/\/pgapi\.ksmobile\.com\/v1\/ios\/auth url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/photoGrid.js
+
+#小影-视频剪辑制作+解锁VIP
+#下载地址：https://is.gd/TPimZo
+#*******************************
+^https:\/\/(xy-viva\.kakalili|api-chn.rthdo)\.com\/api\/rest\/u\/vipVerifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/xiaoyin.js
+
+#MX滤镜大师+解锁订阅
+#下载地址：https://is.gd/PCaWgW
+#*******************************
+https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/MIX.js
+
+#网速管家+解锁VIP
+#下载地址：https://is.gd/46ZREk
+#*******************************
+^https:\/\/api-v3\.speedtest\.cn\/user\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wsgj.js
+
+#网速测试大师+解锁订阅
+#下载地址：https://is.gd/yQ8iFu
+#*******************************
+^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wscsds.js
+
+#Pixelance Al照片修复+解锁订阅
+#下载地址：https://is.gd/jdWRxe
+#*******************************
+^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Pixelance.js
+
+#Collart 拼图趣+解锁订阅
+#下载地址：https://is.gd/qRbshJ
+#*******************************
+^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Collart.js
+
+#印章生成器+解锁订阅
+#下载地址：https://is.gd/neA2XY
+#*******************************
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/yzscq.js
+
+
 
