--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -47,6 +47,8 @@ hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itu
 //熊掌记- Markdown
 //拼图酱+解锁订阅
 //拼图鸭相机-解锁VIP
+//Focos+解锁订阅
+//印章生成器+解锁订阅
 //*******************************
 
 #Apollo-记录你的影视生活
