--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -1,5 +1,4 @@
-hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,%APPEND% api4.bybutter.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,puzzle.xcxsc.net,puzzle.xcxsc.net,mid.zineapi.com,scibug.com,pay.wecut.com,baimiao.uzero.cn,api-weather.andy.works,closet.jinjian.tech,photos.adobe.io,gateway.ergedd.com,yyy.bosum.com,api.v1.esread.com,p.du.163.com,api.vistopia.com.cn,api-sub.meitu.com,api.apphud.com,pgapi.ksmobile.com,xy-viva.kakalili.com, api-chn.rthdo.com,bmall.camera360.com,api-v3.speedtest.cn,iap.etm.tech,iap.etm.tech,iap.etm.tech,
-
+hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,%APPEND% api4.bybutter.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,puzzle.xcxsc.net,mid.zineapi.com,scibug.com,pay.wecut.com,baimiao.uzero.cn,api-weather.andy.works,closet.jinjian.tech,photos.adobe.io,gateway.ergedd.com,yyy.bosum.com,api.v1.esread.com,p.du.163.com,api.vistopia.com.cn,api-sub.meitu.com,api.apphud.com,pgapi.ksmobile.com,xy-viva.kakalili.com, api-chn.rthdo.com,bmall.camera360.com,api-v3.speedtest.cn,iap.etm.tech,iap.etm.tech,iap.etm.tech,
 
 
 
@@ -46,7 +45,6 @@ hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itu
 //文件管理器
 //熊掌记- Markdown
 //拼图酱+解锁订阅
-//拼图鸭相机-解锁VIP
 //Focos+解锁订阅
 //印章生成器+解锁订阅
 //*******************************
@@ -399,11 +397,6 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #使用方法：下载以后/不要打开游戏/先开启规则/进入游戏即可
 #*******************************
 #http:\/\/yxgs-tf-yx\.tapenjoy\.com\/api\/user\/dl url script-request-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/xbbxz.js
-
-#拼图鸭相机-解锁VIP
-#下载地址：https://is.gd/0GSZqD
-#*******************************
-^https:\/\/puzzle\.xcxsc\.net\/v5\/user\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ptyxj.js
 
 #PDF—Expert点睛+解锁订阅
 #下载地址：https://is.gd/oYx3kv
